align items to center, fix width of nutrition facts responsively

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -31,6 +31,6 @@
     /* Media */  
   --mobile: 320px;
   --tablet: 768px;
-  --desktop: 1100;
+  --desktop: 1100px;
 
 }
